add carType apis
